syntax = "proto3";

package accounting_proto;

option go_package = "./accounting_proto";

message RequestGetAccountingByWalletId {
  string id = 1;
}

message ResponseGetAccountingByWalletId {
  bool error = 1;
  Accounting data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestCreateAccounting {
  string id = 1;
  string idWallet = 2;
  double amount = 3;
}

message ResponseCreateAccounting {
  bool error = 1;
  Accounting data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message Accounting {
  string id = 1;
  string id_wallet = 2;
  double amount = 3;
  string created_at = 4;
  string updated_at = 5;
}

message RequestSetAmountToAccounting {
  string wallet_id = 1;
  double amount = 2;
}

message ResponseSetAmountToAccounting {
  bool error = 1;
  Accounting data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

service accountingServicesAccounting {
  rpc GetAccountingByWalletById(RequestGetAccountingByWalletId) returns (ResponseGetAccountingByWalletId){}
  rpc CreateAccounting(RequestCreateAccounting) returns (ResponseCreateAccounting){}
  rpc SetAmountToAccounting(RequestSetAmountToAccounting) returns (ResponseSetAmountToAccounting){}
}
