syntax = "proto3";

package users_proto;

option go_package = "./users_proto";

message UserRequest {
  string id = 1;
  string nickname = 2;
  string email = 3;
  string password = 4;
  string confirm_password = 5;
  string name = 6;
  string lastname = 7;
  int32 id_type = 8;
  string id_number = 9;
  string cellphone = 10;
  string birth_date = 11;
}

message UserResponse {
  bool error = 1;
  User data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message User {
  string iD = 1;
  string nickname = 2;
  string email = 3;
  string name = 4;
  string lastname = 5;
  int32 id_type = 6;
  string id_number = 7;
  string cellphone = 8;
  int32 status_id = 9;
  string last_login = 10;
  string birth_date = 11;
  int32 id_role = 12;
  string rsa_private = 13;
  string rsa_public = 14;
}

message ActivateUserRequest {
  string code = 1;
}

message ValidateEmailRequest {
  string email = 1;
}

message ValidateNicknameRequest {
  string nickname = 1;
}

message GetUserByIDRequest {
  string id = 1;
}

message ValidateIdentityRequest {
  string identity_number = 1;
}

message ValidateCertifierRequest {
  string identity_number = 1;
}

message ValidateResponse {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestGetByIdentityNumber {
  string identity_number = 1;
}

message ResponseGetByIdentityNumber {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestUpdateUserPhoto {
  string file_encode = 1;
  string file_name = 2;
}

message ResponseUpdateUserPhoto {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestGetUserPhoto {
  string user_id = 1;
}

message ResponseGetUserPhoto {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestChangePwd {
  string old_password = 1;
  string new_password = 2 ;
  string confirm_password = 3;
}

message ResponseChangePwd {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestCreateUserBySystem {
  string nickname = 1;
  string email = 2;
  string password = 3;
  string full_path_photo = 4;
  string name = 5;
  string lastname = 6;
  int32 id_type = 7;
  string id_number = 8;
  string cellphone = 9;
  string birth_date = 10;
}

message ResponseCreateUserBySystem {
  bool error = 1;
  User data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqCreateUserWallet {
  string user_id = 1;
  string wallet_id = 2;
}

message ResponseCreateUserWallet {
  bool error = 1;
  UserWallet data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message UserWallet {
  string id = 1;
  string id_user = 2;
  string id_wallet = 3;
  bool   is_delete = 4;
  string deleted_at = 5;
  string created_at = 6;
  string updated_at = 7;
}

service authServicesUsers {
  rpc CreateUser(UserRequest) returns (UserResponse){}
  rpc ActivateUser(ActivateUserRequest) returns (ValidateResponse){}
  rpc ValidateEmail(ValidateEmailRequest) returns (ValidateResponse){}
  rpc ValidateNickname(ValidateNicknameRequest) returns (ValidateResponse){}
  rpc GetUserById(GetUserByIDRequest) returns (UserResponse){}
  rpc ValidateIdentity(ValidateIdentityRequest) returns (ValidateResponse){}
  rpc ValidateCertifier(ValidateCertifierRequest) returns (ValidateResponse){}
  rpc ValidIdentityNumber(RequestGetByIdentityNumber) returns (ResponseGetByIdentityNumber){}
  rpc UpdateUserPhoto(RequestUpdateUserPhoto) returns (ResponseUpdateUserPhoto){}
  rpc GetUserPhoto(RequestGetUserPhoto) returns (ResponseGetUserPhoto){}
  rpc ChangePassword(RequestChangePwd) returns (ResponseChangePwd){}
  rpc CreateUserBySystem(RequestCreateUserBySystem) returns (ResponseCreateUserBySystem){}
  rpc CreateUserWallet(RqCreateUserWallet) returns (ResponseCreateUserWallet){}
}
