syntax = "proto3";

package wallet_proto;

option go_package = "./wallet_proto";

message DataWallet {
  string id = 1;
  string mnemonic = 2;
  KeyPair key = 3;
}

message KeyPair {
  string public = 1;
  string private = 2;
}

message Wallet {
  string id = 1;
  string mnemonic = 2;
  string public = 3;
  string ip_device = 4;
  int32  status_id = 5;
  string identity_number = 6;
  string created_at = 7;
  string updated_at = 8;
}

message RequestGetWalletById {
  string id = 1;
}

message ResponseGetWalletById {
  bool error = 1;
  Wallet data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqGetByIdentityNumber {
  string identity_number = 1;
}

message ResponseGetByIdentityNumber {
  bool error = 1;
  Wallet data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RequestCreateWallet {
  string identity_number = 1;
}

message ResponseCreateWallet {
  bool error = 1;
  DataWallet data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqUpdateWallet {
  string id = 1;
  string ip_device = 2;
  string identity_number = 3;
  int32 status_id = 4;
}

message ResUpdateWallet {
  bool error = 1;
  Wallet data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqFrozenMoney {
  string wallet_id = 1;
  double amount = 2;
  string lottery_id = 3;
}

message resFrozenMoney {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqUnFreezeMoney {
  string wallet_id = 1;
  string lottery_id = 2;
  double penalty = 3;
}

message resUnFreezeMoney {
  bool error = 1;
  string data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqGetFrozenMoney {
  string wallet_id = 1;
}

message resGetFrozenMoney {
  bool error = 1;
  double data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

service walletServicesWallet {
  rpc GetWalletById(RequestGetWalletById) returns (ResponseGetWalletById){}
  rpc GetWalletByIdentityNumber(RqGetByIdentityNumber) returns (ResponseGetByIdentityNumber){}
  rpc CreateWallet(RequestCreateWallet) returns (ResponseCreateWallet){}
  rpc UpdateWallet(RqUpdateWallet) returns (ResUpdateWallet){}
  rpc FrozenMoney(RqFrozenMoney) returns (resFrozenMoney){}
  rpc UnFreezeMoney(RqUnFreezeMoney) returns (resUnFreezeMoney){}
  rpc GetFrozenMoney(RqGetFrozenMoney) returns (resGetFrozenMoney){}
}
